--- a/src/index.html
+++ b/src/index.html
@@ -211,13 +211,24 @@ to make deep networks more transparent.</p>
 computer systems more programmable. I develop programming
 interfaces, open standards, tools and libraries that make complex
 systems easier to understand.
+<p>
+<a href="publications.html">Publication List</a>.
+<br>
+<a href="cv.html">Curriculum Vitae</a>.
+<br>
+Publication pages on
+<a href="http://dblp.uni-trier.de/pers/hd/b/Bau:David">Dblp</a>
+and <a href="https://scholar.google.com/citations?hl=en&user=CYI6cKgAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a>.
+<br>
+My office:
+<a href="https://whereis.mit.edu/?zoom=16&lat=42.361612839999985&lng=-71.09056785999995&maptype=mit&q=32-383&open=object-32">Stata 32-383</a>
 </div> <!-- prologue -->
 </div>
 </div>
 <div class="row">
 <div class="col">
 <div class="publication">
-<h2 class="mt-4 mb-3">Selected Publications and Projects</h2>
+<h2 class="mt-4 mb-3">Selected Projects</h2>
 <input class="collapse" type="checkbox">
 <p>
 <img src="seeing.png" class="projpic">
