Add rewriting, cv, and publications page.

--- a/src/index.html
+++ b/src/index.html
@@ -229,6 +229,33 @@ My office:
 <div class="col">
 <div class="publication">
 <h2 class="mt-4 mb-3">Selected Projects</h2>
+
+<input class="collapse" type="checkbox">
+<p>
+<img src="rewriting.gif" class="projpic">
+<a href="http://rewriting.csail.mit.edu/">Rewriting a Deep Generative Model.</a>
+  Deep network training is a blind optimization procedure
+  where programmers define objectives but not the solutions that emerge.
+  In this paper we ask if deep networks can be created in different way:
+  we ask if a user can directly rewrite the rules of a model.
+<span class="more"></span>
+<span class="extra">
+  We develop a method and a
+  user interface that allows simple visual editing of the rules of
+  a GAN, and demonstrate direct editing of high-level rules in pretrained
+  state-of-the-art StyleGANv2 models.  Our method finds connections
+  between modern large network layers and the classic neural data structure
+  of Optimal Linear Associative Memory, and shows that it is feasible
+  for a person to directly edit the weights of a large model to change
+  its behavior, without training againist a data set, by understanding
+  the model's internal structure.
+</span>
+<a href="http://rewriting.csail.mit.edu/paper/"
+><span class="me">D Bau</span>, S Liu, TZ Wang, JY Zhu, A Torralba.
+<em>Rewriting a Deep Generative Model</em>.
+ECCV 2020 oral</a>.
+</p>
+
 <input class="collapse" type="checkbox">
 <p>
 <img src="seeing.png" class="projpic">
@@ -255,6 +282,7 @@ by creating realistic instances without those objects.
 B Zhou, A Torralba. <em>Seeing What a GAN Cannot Generate</em>.
 ICCV 2019 oral</a>.
 </p>
+
 <input class="collapse" type="checkbox">
 <p>
 <img src="parliament.gif" class="projpic">
