Add SIDN as a project.

--- a/src/index.html
+++ b/src/index.html
@@ -258,6 +258,34 @@ ECCV 2020 oral</a>.
 
 <input class="collapse" type="checkbox">
 <p>
+<img src="sidn-thumb.png" class="projpic">
+<a href="http://sidn.csail.mit.edu/">Structure and Interpretation of Deep Networks.</a>
+Most introductory courses on deep networks focus on how to train models, but it
+is just as important to understand the structure and behavior of the models
+after training is done.  By bringing current research in deep network interpretation
+to students, the SIDN course is designed to start filling that gap.
+<span class="more"></span>
+<span class="extra">
+Organized with <a href="http://www.cs.technion.ac.il/~belinkov/"
+>Yonatan Belinkov</a>,
+<a href="https://juliusadebayo.com/about"
+>Julius Adebayo</a>
+and a group of a dozen brilliant speakers,
+our course covered salience methods, global model analysis,
+adversarial robustness, fairness, interactive methods, and natural
+language explanations.  Each topic is anchored by a set of
+hands-on exercises in Colab notebooks that are posted
+online for students to work through and explore.
+</span>
+<a href="http://sidn.csail.mit.edu/">Organizers <b>D Bau</b>,
+Y Belinkov, J Adebayo, H Strobelt, A Ross, V Petsiuk, S Gehrmann, M Suzgun,
+S Santurkar, D Tsipras, I Chen, J Mu, J Andreas.
+<em>Structure and Interpretation of Deep Networks.</em>
+2020 IAP Course at MIT.</a>
+</p>
+
+<input class="collapse" type="checkbox">
+<p>
 <img src="seeing.png" class="projpic">
 <a href="http://gandissect.csail.mit.edu/papers/Seeing_What_a_GAN_Cannot_Generate.pdf">Seeing what a GAN Cannot Generate</a>
 studies mode dropping by asking the inverse question:
@@ -340,7 +368,7 @@ specific types of objects in a scene.
 </span>
 <a href="https://openreview.net/pdf?id=Hyg_X2C5FX"
 ><span class="me">D Bau</span>, JY Zhu, H Strobelt, B Zhou, JB Tenenbaum,
-WT Freeman, A Torralba. <em>GAN Dissection: 
+WT Freeman, A Torralba. <em>GAN Dissection:
   Visualizing and Understanding Generative Adversarial Networks</em>.
   In ICLR 2019</a>.
 </p>
