--- a/src/publications.html
+++ b/src/publications.html
@@ -193,7 +193,11 @@ Saksham Aggarwal, David Anthony Bau, <strong>David Bau</strong>. <a href="https:
 <div class="main pub"><strong>David Bau</strong>, Anthony Bau. <a href="http://dl.acm.org/citation.cfm?id=2688481">A Preview of Pencil Code: A Tool for Developing Mastery of Programming</a>.
 <em>Proceedings of the 2nd Workshop on Programming for Mobile & Touch.</em> <nobr>(PROMOTO 2014)</nobr></div>
 
-<h3 class="main">Journals and Magazines</h3>
+<h3 class="main">Journals</h3>
+<div class="main pub">
+  <strong>David Bau</strong>, Jun-Yan Zhu, Hendrik Strobelt, Agata Lapedriza, Bolei Zhou, and Antonio Torralba. <a href="https://doi.org/10.1073/pnas.1907375117">Understanding the role of individual units in a deep neural network.</a> <em> Proceedings of the National Academy of Sciences, September 2020.</em>
+</div>
+
 <div class="main pub">
 <strong>David Bau</strong>, Bolei Zhou, Aude Oliva, Antonio Torralba:
 <a href="https://arxiv.org/pdf/1711.05611.pdf">Interpreting Deep Visual Representations via Network Dissection.</a> <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI) Volume 41 Issue 9, September 2019, pp. 2131-2145.</em>
