--- a/src/cv.html
+++ b/src/cv.html
@@ -79,7 +79,7 @@ Computer vision, Explanation of deep networks, HCI.
 <h2 class="main">Research Projects</h2>
 
 <div class="main item">
-<strong>Model Rewriting, <a href="http://rewriting.csail.mit.edu/">rewriting.csail.mit.edu</a>.</strong> I investigate how a user can directly change the parameters of a deep model according to their own intentions, rather than using a data set for retraining.  I find that the weights of a model are organized like an optimal linear associative memory, so rules can be changed by rewriting individual lines of memory. Using this insight, I demonstrate an interactive application for novice users to visually reprogram the rules of state-of-the-art StyleGANv2 models.
+<strong>Model Rewriting, <a href="http://rewriting.csail.mit.edu/">rewriting.csail.mit.edu</a>.</strong> A project to investigate how a user can directly change the parameters of a deep model according to their own intentions, rather than using a data set for retraining.  I find that the weights of a model are structured like an optimal linear associative memory, and I use this insight to develop a method and tool for rewriting the rules of a StyleGANv2.
 </div>
 
 <div class="main item">
@@ -91,7 +91,7 @@ Computer vision, Explanation of deep networks, HCI.
 </div>
 
 <div class="main item">
-<strong>Network Dissection, <a href="http://netdissect.csail.mit.edu/">netdissect.csail.mit.edu</a>.</strong>  A system that quantifies human-interpretable concept detectors within representations of deep networks for vision.  This work was used to identify emergent semantics in a range of settings, and to quantify the disentanglement of meaningful individual units in vision networks.
+<strong>Network Dissection, <a href="http://netdissect.csail.mit.edu/">netdissect.csail.mit.edu</a>.</strong>  A system that quantifies human-interpretable concept detectors within representations of deep networks for vision.  This work is used to identify emergent semantics in a range of settings, and to quantify the disentanglement of meaningful individual units in vision networks.
 </div>
 
 <!--
@@ -217,7 +217,7 @@ Schema standard in Java.
 <div class="main item">
 <strong>Weblogic Workshop</strong>.  Crossgain and BEA Systems.
 <ul>
-<li>Lead the design of a development tool
+<li>Led the design of a development tool
 to simplify the creation of cloud services for Java programmers.
 Acquired by BEA Systems.
 </ul>
@@ -315,7 +315,12 @@ Saksham Aggarwal, David Anthony Bau, <strong>David Bau</strong>. <a href="https:
 <div class="main pub"><strong>David Bau</strong>, Anthony Bau. <a href="http://dl.acm.org/citation.cfm?id=2688481">A Preview of Pencil Code: A Tool for Developing Mastery of Programming</a>.
 <em>Proceedings of the 2nd Workshop on Programming for Mobile & Touch.</em> <nobr>(PROMOTO 2014)</nobr></div>
 
-<h3 class="main">Journals and Magazines</h3>
+<h3 class="main">Journals</h3>
+
+<div class="main pub">
+  <strong>David Bau</strong>, Jun-Yan Zhu, Hendrik Strobelt, Agata Lapedriza, Bolei Zhou, and Antonio Torralba. <a href="https://doi.org/10.1073/pnas.1907375117">Understanding the role of individual units in a deep neural network.</a> <em> Proceedings of the National Academy of Sciences, September 2020.</em>
+</div>
+
 <div class="main pub">
 <strong>David Bau</strong>, Bolei Zhou, Aude Oliva, Antonio Torralba:
 <a href="http://cvcl.mit.edu/papers/interpreting-deep-visual-PAMI.pdf">Interpreting Deep Visual Representations via Network Dissection.</a> <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI) Volume 41 Issue 9, September 2019, pp. 2131-2145.</em>
@@ -378,6 +383,10 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Invited Talks</h2>
 
+<div class="main pub"><em>Interacting with the Structure of a Deep Net: Rewriting the Rules of a GAN.</em> Adobe Research.  San Jose, CA. August 2020.</div>
+<div class="main pub"><em>Reflected Light and Doors in the Sky: Rewriting GANs.</em> Advances in Image Manipulation Workshop, ETH Zurich.  Zurich, Switzerland. August 2020.</div>
+<div class="main pub"><em>Dissecting and Modifying the Rules Inside a GAN.</em> Computer Vision Seminar, Berkeley. Berkeley, CA.  August 2020.</div>
+<div class="main pub"><em>Creativity, Human Agency and Rewriting Deep Generative Models.</em> Computer Graphics Seminar, Stanford University. Palo Alto, CA. August 2020.</div>
 <div class="main pub"><em>Semantic Photo Manipulation using a GAN.</em> RealTime Conference at SIGGRAPH, June 2020.</div>
 <div class="main pub"><em>Explaining the Units of Classifiers and Generators in Vision.</em>  Computer Vision Seminar, Brown University.  Providence, RI.  April 2020. </div>
 <div class="main pub"><em>Dissecting the Semantic Structure of Deep Networks for Vision.</em>  Explainable AI for Vision Workshop.  Seoul, Korea.  November 2019. </div>
