Simpler, more assertive.

--- a/src/index.html
+++ b/src/index.html
@@ -167,8 +167,7 @@ figcaption {
  <div class="namecard">
  <h1><nobr>David Bau</nobr></h1>
  <p class="lead">
- <nobr>Creating Transparency</nobr> in a
- <nobr>Complex World</nobr>
+ <nobr>Transparent AI</nobr>
 <address>
  <a href="https://www.csail.mit.edu/about">
  <nobr>MIT Computer Science</nobr> and
@@ -188,15 +187,24 @@ document.write('<a href="mailto:' + emn + '">' + emn + '</a>');
 <iframe id="selfpic-video" width="448" height="252" src="https://www.youtube.com/embed/jT5nYLND7co?controls=1&playsinline=1&loop=1&modestbranding=1&rel=0&cc_load_policy=1&enablejsapi=1&origin=https://people.csail.mit.edu" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <figcaption>Why we study deep network internals.  <nobr>David Bau</nobr> (narrates), with Antonio Torralba, Jun-Yan Zhu, Hendrik Strobelt, Jonas Wulff, and William Peebles. <nobr>Video by Lillie Paquette,</nobr> MIT School of Engineering.</figcaption>
 </figure>
-<p>It is crucial to understand the algorithms
+<!--<p>It is crucial to understand the algorithms
 discovered by machine-learning systems so we can explain, control, and
 design their behavior in new domains.
-<p>Artificial intelligence should create transparency in a complex world.
-As our sophisticated systems exhibit more unexpected and emergent
-behavior, I believe the focus of machine learning should shift to
-<em>machine explanation</em>: the development of methods that reveal
-the patterns and strategies our models contain, so that
-programmers and users can retain agency.
+-->
+<p>Artificial intelligence should be transparent.
+As large-scale machine learning systems exhibit
+more emergent and unexpected behavior,
+<!--our priority needs to be developing
+methods for <em>machine explanation</em>. We
+--> we need to know
+how they work.  And for people to have real
+agency in this new era of computer science, our understanding
+of large models must be both specific and concrete.
+We must be able to explain behavior,
+debug internal logic, and modify hidden
+rules that govern choices.  We should be able to take apart
+the pieces and put them back together, in different ways,
+to make something new.
 </p>
 <p>As a PhD student in <a href="http://web.mit.edu/torralba/www/"
 >Antonio Torralba's lab</a>, I develop techniques for
@@ -514,6 +522,7 @@ Numerical Linear Algebra</a> is the graduate textbook on numerical linear algebr
         <a href="https://www.linkedin.com/in/david-bau-4b8130/">LinkedIn</a>
         <a href="http://davidbau.com">Personal Blog</a>
         <a href='https://www.google.com/search?safe=off&noj=1&biw=1855&bih=917&q=david+bau+-music+-mp3+-radio+-youtube+-soundcloud+-minnesota+-tennis+-"records"+-"noah+david"+-"extension+educator"+-"bau+mann"+-"bau+man"+-"bau+telle"+-"bau+xi"+-mirador+-atticus&oq=david+bau+-music+-mp3+-radio+-youtube+-soundcloud+-minnesota+-tennis+-"records"+-"noah+david"+-"extension+educator"+-"bau+mann"+-"bau+man"+-"bau+telle"+-"bau+xi"+-mirador+-atticus'>Web</a>
+        <a href="https://accessibility.csail.mit.edu/">Accessibility</a>
         <a href="https://whereis.mit.edu/?zoom=16&lat=42.361612839999985&lng=-71.09056785999995&maptype=mit&q=32-383&open=object-32">Office: Stata 32-383</a>
         </div>
         </div>
