--- a/src/index.html
+++ b/src/index.html
@@ -215,7 +215,7 @@ simple underlying structure.
 The focus of my research at MIT is therefore to
 find ways to enhance and exploit this structure
 to make deep networks more transparent.</p>
-<p>I also have a long interest on the wider problem of making all
+<p>I also have a long interest in the wider problem of making all
 computer systems more programmable. I develop programming
 interfaces, open standards, tools and libraries that make complex
 systems easier to understand.
