--- a/src/cv.html
+++ b/src/cv.html
@@ -383,6 +383,9 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Invited Talks</h2>
 
+<div class="main pub"><em>Cracking Open the Black Box.</em> MIT-IBM Seminar Series.  Cambridge, MA. September 2020.</div>
+<div class="main pub"><em>Human Agency and Network Rules: Rewriting a Generative Network.</em> Google Magenta Group Meeting.  Mountain View, CA. September 2020.</div>
+<div class="main pub"><em>GAN Paint and GAN Rewriting.</em> Boston University Computer Vision Semniar.  Boston, MA. September 2020.</div>
 <div class="main pub"><em>Interacting with the Structure of a Deep Net: Rewriting the Rules of a GAN.</em> Adobe Research.  San Jose, CA. August 2020.</div>
 <div class="main pub"><em>Reflected Light and Doors in the Sky: Rewriting GANs.</em> Advances in Image Manipulation Workshop, ETH Zurich.  Zurich, Switzerland. August 2020.</div>
 <div class="main pub"><em>Dissecting and Modifying the Rules Inside a GAN.</em> Computer Vision Seminar, Berkeley. Berkeley, CA.  August 2020.</div>
