Simplify language further.

--- a/src/index.html
+++ b/src/index.html
@@ -187,22 +187,18 @@ document.write('<a href="mailto:' + emn + '">' + emn + '</a>');
 <iframe id="selfpic-video" width="448" height="252" src="https://www.youtube.com/embed/jT5nYLND7co?controls=1&playsinline=1&loop=1&modestbranding=1&rel=0&cc_load_policy=1&enablejsapi=1&origin=https://people.csail.mit.edu" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <figcaption>Why we study deep network internals.  <nobr>David Bau</nobr> (narrates), with Antonio Torralba, Jun-Yan Zhu, Hendrik Strobelt, Jonas Wulff, and William Peebles. <nobr>Video by Lillie Paquette,</nobr> MIT School of Engineering.</figcaption>
 </figure>
-<!--<p>It is crucial to understand the algorithms
-discovered by machine-learning systems so we can explain, control, and
-design their behavior in new domains.
--->
 <p>Artificial intelligence should be transparent.
 As large-scale machine learning systems exhibit
 more emergent and unexpected behavior,
-<!--our priority needs to be developing
-methods for <em>machine explanation</em>. We
---> we need to know
-how they work.  And for people to have real
-agency in this new era of computer science, our understanding
-of large models must be both specific and concrete.
+we need to know how they work.
+And for people to have real agency
+in this new era of computer science,
+our understanding of large models must be
+specific and concrete.
 We must be able to explain behavior,
 debug internal logic, and modify hidden
-rules that govern choices.  We should be able to take apart
+rules that govern choices.
+We should be able to take apart
 the pieces and put them back together, in different ways,
 to make something new.
 </p>
