--- a/src/cv.html
+++ b/src/cv.html
@@ -383,6 +383,7 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Invited Talks</h2>
 
+<div class="main pub"><em>Analyzing the Role of Neurons in an Artificial Neural Network.</em> Kanwisher Lab Meeting, MIT Dept of Brain and Cognitive Sciences.  Cambridge, MA. September 2020.</div>
 <div class="main pub"><em>Cracking Open the Black Box.</em> MIT-IBM Seminar Series.  Cambridge, MA. September 2020.</div>
 <div class="main pub"><em>Human Agency and Network Rules: Rewriting a Generative Network.</em> Google Magenta Group Meeting.  Mountain View, CA. September 2020.</div>
 <div class="main pub"><em>GAN Paint and GAN Rewriting.</em> Boston University Computer Vision Semniar.  Boston, MA. September 2020.</div>
