Update for faculty applications 2020.

--- a/src/cv.html
+++ b/src/cv.html
@@ -73,25 +73,21 @@ Cambridge, MA 02139
 </div>
 <h2 class="main">Research Interests</h2>
 <div class="main item">
-Computer vision, Explanation of deep networks, HCI.
+Computer vision, Explainable machine learning, Human-computer iteraction.
 </div>
 
 <h2 class="main">Research Projects</h2>
 
 <div class="main item">
-<strong>Model Rewriting, <a href="http://rewriting.csail.mit.edu/">rewriting.csail.mit.edu</a>.</strong> A project to investigate how a user can directly change the parameters of a deep model according to their own intentions, rather than using a data set for retraining.  I find that the weights of a model are structured like an optimal linear associative memory, and I use this insight to develop a method and tool for rewriting the rules of a StyleGANv2.
+<strong>Model Rewriting, <a href="https://rewriting.csail.mit.edu/">rewriting.csail.mit.edu</a>.</strong> A project to investigate how a user can directly change the parameters of a deep model according to their own intentions, rather than using a data set for retraining.  I find that the weights of a model are structured like an optimal linear associative memory, and I use this insight to develop a method and tool for rewriting the rules of start-of-the-art generative networks.
 </div>
 
 <div class="main item">
-<strong>GAN Omissions, <a href="http://ganseeing.csail.mit.edu/">ganseeing.csail.mit.edu</a>.</strong>  A method for measuring and visualizing mode dropping in state-of-the-art GANs.  This work reveals that GANs omissions can drop object classes when synthesizing a scene.
+<strong>GAN Paint, <a href="https://gandissect.csail.mit.edu/">gandissect.csail.mit.edu</a>.</strong>  An analysis method that reveals emergent object concepts represented in the middle layers of a GAN (trained without supervision of labels).  The encoding of objects is simple enough that objects can be added or removed from a scene by activating or silencing units in the GAN directly. I apply this technique to semantic photo manipulation in GAN Paint, <a href="http://ganpaint.io/">ganpaint.io</a>.
 </div>
 
 <div class="main item">
-<strong>GAN Dissection, <a href="http://gandissect.csail.mit.edu/">gandissect.csail.mit.edu</a>.</strong>  An analysis method that revals emergent object concepts represented in the middle layers of a GAN (trained without supervision of labels).  The encoding of objects is simple enough that objects can be added or removed from a scene by activating or silencing units in the GAN directly. I apply this technique to semantic photo manipulation in GAN Paint, <a href="http://ganpaint.io/">ganpaint.io</a>.
-</div>
-
-<div class="main item">
-<strong>Network Dissection, <a href="http://netdissect.csail.mit.edu/">netdissect.csail.mit.edu</a>.</strong>  A system that quantifies human-interpretable concept detectors within representations of deep networks for vision.  This work is used to identify emergent semantics in a range of settings, and to quantify the disentanglement of meaningful individual units in vision networks.
+<strong>Network Dissection, <a href="https://dissect.csail.mit.edu/">dissect.csail.mit.edu</a>.</strong>  A system that quantifies human-interpretable concept detectors within representations of deep networks for vision.  This work is used to identify emergent semantics in a range of settings, and to quantify the disentanglement of meaningful individual units in vision networks.
 </div>
 
 <!--
@@ -235,12 +231,29 @@ web browser (Internet Explorer 4, 5, 6).
 <li><em>Blackbird platform.</em> Designed
 features for a network media platform for MSN.
 <li><em>Intentional Programming.</em> Intern on Charles Simonyi's
-project to build a new type of programming tool.
+innovative programming tool project.
 </ul>
 </div>
 
 
 <h2 class="main">Peer-Reviewed Publications</h2>
+
+
+<h3 class="main">Journals</h3>
+
+<div class="main pub">
+  <strong>David Bau</strong>, Jun-Yan Zhu, Hendrik Strobelt, Agata Lapedriza, Bolei Zhou, and Antonio Torralba. <a href="https://doi.org/10.1073/pnas.1907375117">Understanding the role of individual units in a deep neural network.</a> <em> Proceedings of the National Academy of Sciences (PNAS), Volume 117, no. 48, December 1 2020, pp. 30071-30078.</em>
+</div>
+
+<div class="main pub">
+<strong>David Bau</strong>, Bolei Zhou, Aude Oliva, Antonio Torralba:
+<a href="http://cvcl.mit.edu/papers/interpreting-deep-visual-PAMI.pdf">Interpreting Deep Visual Representations via Network Dissection.</a> <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI) Volume 41 Issue 9, September 2019, pp. 2131-2145.</em>
+</div>
+
+<div class="main pub"><strong>David Bau</strong>, Jeff Gray, Caitlin Kelleher, Josh Sheldon, Franklyn Turbak.
+<a href="http://dl.acm.org/citation.cfm?id=3015455">Learnable Programming: Blocks and Beyond</a>. 
+<em>Communications of the ACM (CACM) Volume 60 Issue 6, June 2017. pp. 72-80.</em></div>
+
 
 <!--<div class="index">Computer Vision</div>-->
 <h3 class="main">Conference papers</h3>
@@ -270,6 +283,9 @@ Steven Liu, Tongzhou Wang, <strong>David Bau</strong>, Jun-Yan Zhu, and Antonio 
 <strong>David Bau</strong>, Jun-Yan Zhu, Hendrik Strobelt, Bolei Zhou, Joshua B. Tenenbaum, William T. Freeman, and Antonio Torralba. <a href="http://gandissect.csail.mit.edu/">GAN Dissection: Visualizing and Understanding Generative Adversarial Networks.</a> <em>Proceedings of the Seventh International Conference on Learning Representations.</em> <nobr>(ICLR 2019)</nobr>
 </div>
 <div class="main pub">
+David Weintrop, <strong>David Bau</strong>, and Uri Wilensky. <a href="https://ccl.northwestern.edu/2019/cloud.pdf">The cloud is the limit: A case study of programming on the web, with the web.</a> <em>International Journal of Child-Computer Interaction 20.</em> <nobr>(IJCCI 2019)</nobr>
+</div>
+<div class="main pub">
 Leilani H. Gilpin, <strong>David Bau</strong>, Ben Z. Yuan, Ayesha Bajwa, Michael Specter, Lalana Kagal.  <a href="https://arxiv.org/pdf/1806.00069.pdf">Explaining Explanations: An Overview of Interpretability of Machine Learning.</a> <em>Proceedings of the IEEE 5th International Conference on Data Science and Advanced Analytics.</em> <nobr>(DSAA 2018)</nobr>
 </div>
 <div class="main pub">
@@ -289,13 +305,14 @@ Ming Zhao, Jay Yagnik, Hartwig Adam, <strong>David Bau</strong>.
 </div>
 
 <!--<div class="index">CS Education</div>
-<div class="main pub">
-David Weintrop, <strong>David Bau</strong>, and Uri Wilensky. <a href="https://ccl.northwestern.edu/2019/cloud.pdf">The cloud is the limit: A case study of programming on the web, with the web.</a> <em>International Journal of Child-Computer Interaction 20.</em> <nobr>(IJCCI 2019)</nobr>
-</div>
 -->
 
 <h3 class="main">Workshop papers</h3>
 
+<div class="main pub">
+<strong>David Bau</strong>, Steven Liu, Tongzhou Wang, Jun-Yan Zhu, Antonio Torralba
+<a href="https://neurips2020creativity.github.io/">Horses With Blue Jeans - Creating New Worlds by Rewriting a GAN.</a> <em>4th Workshop on Machine Learning for Creativity and Design</em> <nobr>(NeurIPS 2020 Workshop)</nobr>
+</div>
 <div class="main pub">
 <strong>David Bau</strong>, Jun-Yan Zhu, Jonas Wulff, William Peebles, Hendrik Strobelt, Bolei Zhou, and Antonio Torralba. <a href="https://debug-ml-iclr2019.github.io/cameraready/DebugML-19_paper_18.pdf">Inverting Layers of a Large Generator.</a> <em>ICLR Debugging Machine Learning Models Workshop.</em> <nobr>(ICLR 2019 workshop)</nobr>
 </div>
@@ -315,20 +332,6 @@ Saksham Aggarwal, David Anthony Bau, <strong>David Bau</strong>. <a href="https:
 <div class="main pub"><strong>David Bau</strong>, Anthony Bau. <a href="http://dl.acm.org/citation.cfm?id=2688481">A Preview of Pencil Code: A Tool for Developing Mastery of Programming</a>.
 <em>Proceedings of the 2nd Workshop on Programming for Mobile & Touch.</em> <nobr>(PROMOTO 2014)</nobr></div>
 
-<h3 class="main">Journals</h3>
-
-<div class="main pub">
-  <strong>David Bau</strong>, Jun-Yan Zhu, Hendrik Strobelt, Agata Lapedriza, Bolei Zhou, and Antonio Torralba. <a href="https://doi.org/10.1073/pnas.1907375117">Understanding the role of individual units in a deep neural network.</a> <em> Proceedings of the National Academy of Sciences, September 2020.</em>
-</div>
-
-<div class="main pub">
-<strong>David Bau</strong>, Bolei Zhou, Aude Oliva, Antonio Torralba:
-<a href="http://cvcl.mit.edu/papers/interpreting-deep-visual-PAMI.pdf">Interpreting Deep Visual Representations via Network Dissection.</a> <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI) Volume 41 Issue 9, September 2019, pp. 2131-2145.</em>
-</div>
-
-<div class="main pub"><strong>David Bau</strong>, Jeff Gray, Caitlin Kelleher, Josh Sheldon, Franklyn Turbak.
-<a href="http://dl.acm.org/citation.cfm?id=3015455">Learnable Programming: Blocks and Beyond</a>. 
-<em>Communications of the ACM (CACM) Volume 60 Issue 6, June 2017. pp. 72-80.</em></div>
 
 <h2 class="main">Book</h2>
 
@@ -423,25 +426,38 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h3 class="main">Masters Theses</h3>
 
+<div class="main pub">Christine You. <em>Contrasting Contrastive and Supervised Model Representations.</em></div>
+
+<div class="main pub">Mahi Elango. <em>Rewriting a Classification Model</em></div>
+
 <div class="main pub">Brian Shimanuki. <em>Joint GAN generation of text and images.</em></div>
 
 <div class="main pub">Richard Yip. <em>Understanding What a Captioning Network Doesn't Know.</em></div>
 
 <h3 class="main">Undergraduate Research</h3>
 
-<div class="main pub">James Gilles.  <em>Analysis of representation similarity across vision networks.</em></div>
 
-<div class="main pub">Wendy Wei.  <em>Visualization of semantic clusters in a population of networks.</em></div>
+<div class="main pub">Audrey Cui. <em>Steerable GAN Paint for reelighting a scene.</em></div>
 
-<div class="main pub">Kaveri Nadhamuni.  <em>A search for bug-causing neurons in classifiers.</em></div>
+<div class="main pub">Brian Park. <em>A synthetic data set for lighting control.</em></div>
 
-<div class="main pub">William Peebles.
-<em>Semantic manipulation of a user-provided photo.</em></div>
+<div class="main pub">Sam Boshar. <em>Interactive saliency maps.</em></div>
+
+<div class="main pub">Ben Gardner. <em>Detecting novelty using calibrated uncertainty.</em></div>
+
+<div class="main pub">Tony Peng.  <em>Segmenting lighting in a scene.</em></div>
 
 <div class="main pub">Steven Liu.
 <em>Self-conditioned Generative Adversarial Networks.</em></div>
 
-<div class="main pub">Tony Peng.  <em>Using GANs to alter the lighting in a scene.</em></div>
+<div class="main pub">William Peebles.
+<em>Semantic manipulation of a user-provided photo.</em></div>
+
+<div class="main pub">Kaveri Nadhamuni.  <em>A search for bug-causing neurons in classifiers.</em></div>
+
+<div class="main pub">Wendy Wei.  <em>Visualization of semantic clusters in a population of networks.</em></div>
+
+<div class="main pub">James Gilles.  <em>Analysis of representation similarity across vision networks.</em></div>
 
 
 <h2 class="main">Other Activities</h2>
@@ -465,11 +481,11 @@ Cambridge, MA 02139<br>
 
 <tr>
 <td>
-<em>Prof. William T. Freeman</em><br>
+<em>Prof. Aleksander M&#261;dry</em></br>
 MIT CSAIL<br>
 32 Vassar Street<br>
 Cambridge, MA 02139<br>
-<tt>billf@mit.edu</tt>
+<tt>madry@mit.edu</tt>
 </td>
 </tr>
 
@@ -485,23 +501,11 @@ Berkeley, CA 94720<br>
 
 <tr>
 <td>
-<em>Prof. Phillp Isola</em><br>
+<em>Prof. William T. Freeman</em><br>
 MIT CSAIL<br>
 32 Vassar Street<br>
 Cambridge, MA 02139<br>
-<tt>phillipi@mit.edu</tt>
-</td>
-
-</tr>
-
-<tr>
-<td>
-<em>Aude Oliva</em><br>
-Principal Research Scientist<br>
-MIT CSAIL<br>
-32 Vassar Street<br>
-Cambridge, MA 02139<br>
-<tt>oliva@mit.edu</tt>
+<tt>billf@mit.edu</tt>
 </td>
 </tr>
 
