--- a/src/publications.html
+++ b/src/publications.html
@@ -127,6 +127,25 @@ figcaption {
     margin: 0 1rem 0 0;
   }
 }
+@media print {
+  .no-print { display: none; heignt: 0; }
+  body {
+    font-family: serif;
+    background-color: white;
+    line-height: 1.2;
+  }
+  h2 {
+    background-color: white;
+    color: black;
+    padding: 0;
+  }
+  a {
+    color: black;
+  }
+  .pub {
+    text-indent: -1em; margin-left: 1em;
+  }
+}
 </style>
 </head>
 <body class="db-page">
@@ -135,7 +154,26 @@ figcaption {
 <div class="col">
 <div class="publication">
 <h2 class="mt-4 mb-3">David Bau - Publications</h2>
-<div class="textcard"><h3 class="main">Conference Papers</h3>
+
+
+<div class="textcard">
+<h3 class="main">Journals</h3>
+<div class="main pub">
+  <strong>David Bau</strong>, Jun-Yan Zhu, Hendrik Strobelt, Agata Lapedriza, Bolei Zhou, and Antonio Torralba. <a href="https://doi.org/10.1073/pnas.1907375117">Understanding the role of individual units in a deep neural network.</a> <em> Proceedings of the National Academy of Sciences (PNAS), Volume 117, no. 48, December 1 2020, pp. 30071-30078.</em>
+</div>
+
+<div class="main pub">
+<strong>David Bau</strong>, Bolei Zhou, Aude Oliva, Antonio Torralba:
+<a href="https://arxiv.org/pdf/1711.05611.pdf">Interpreting Deep Visual Representations via Network Dissection.</a> <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI) Volume 41 Issue 9, September 2019, pp. 2131-2145.</em>
+</div>
+
+<div class="main pub"><strong>David Bau</strong>, Jeff Gray, Caitlin Kelleher, Josh Sheldon, Franklyn Turbak.
+<a href="http://dl.acm.org/citation.cfm?id=3015455">Learnable Programming: Blocks and Beyond</a>. 
+<em>Communications of the ACM (CACM) Volume 60 Issue 6, June 2017. pp. 72-80.</em></div>
+
+
+
+<h3 class="main">Conference Papers</h3>
 
 <div class="main pub">
 <b>David Bau</b>, Steven Liu, Tongzhou Wang, Jun-Yan Zhu, and Antonio Torralba. <a href="http://rewriting.csail.mit.edu/">Rewriting a Deep Generative Model.</a>  <em>Proceedings of the European Conference on Computer Vision.</em> <nobr>(ECCV 2020 oral)</nobr>
@@ -143,6 +181,7 @@ figcaption {
 <div class="main pub">
 Lucy Chai, <b>David Bau</b>, Ser-Nam Lim, and Phillip Isola.  What makes fake images detectable?
 Understanding properties that generalize.  <em>Proceedings of the European Conference on Computer Vision.</em> <nobr>(ECCV 2020)</nobr>
+</div>
 <div class="main pub">
 Steven Liu, Tongzhou Wang, <strong>David Bau</strong>, Jun-Yan Zhu, and Antonio Torralba. <a href="http://selfcondgan.csail.mit.edu/">Diverse Image Generation via Self-Conditioned GANs.</a>  <em>Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition.</em> <nobr>(CVPR 2020)</nobr>
 </div>
@@ -180,6 +219,10 @@ Ming Zhao, Jay Yagnik, Hartwig Adam, <strong>David Bau</strong>.
 <h3 class="main">Workshop Papers</h3>
 
 <div class="main pub">
+<strong>David Bau</strong>, Steven Liu, Tongzhou Wang, Jun-Yan Zhu, Antonio Torralba
+<a href="https://neurips2020creativity.github.io/">Horses With Blue Jeans - Creating New Worlds by Rewriting a GAN.</a> <em>4th Workshop on Machine Learning for Creativity and Design</em> <nobr>(NeurIPS 2020 Workshop)</nobr>
+</div>
+<div class="main pub">
 <strong>David Bau</strong>, Jun-Yan Zhu, Jonas Wulff, William Peebles, Hendrik Strobelt, Bolei Zhou, and Antonio Torralba. <a href="https://debug-ml-iclr2019.github.io/cameraready/DebugML-19_paper_18.pdf">Inverting Layers of a Large Generator.</a> <em>ICLR Debugging Machine Learning Models Workshop.</em> <nobr>(ICLR 2019 workshop)</nobr>
 </div>
 <div class="main pub">
@@ -193,19 +236,6 @@ Saksham Aggarwal, David Anthony Bau, <strong>David Bau</strong>. <a href="https:
 <div class="main pub"><strong>David Bau</strong>, Anthony Bau. <a href="http://dl.acm.org/citation.cfm?id=2688481">A Preview of Pencil Code: A Tool for Developing Mastery of Programming</a>.
 <em>Proceedings of the 2nd Workshop on Programming for Mobile & Touch.</em> <nobr>(PROMOTO 2014)</nobr></div>
 
-<h3 class="main">Journals</h3>
-<div class="main pub">
-  <strong>David Bau</strong>, Jun-Yan Zhu, Hendrik Strobelt, Agata Lapedriza, Bolei Zhou, and Antonio Torralba. <a href="https://doi.org/10.1073/pnas.1907375117">Understanding the role of individual units in a deep neural network.</a> <em> Proceedings of the National Academy of Sciences, September 2020.</em>
-</div>
-
-<div class="main pub">
-<strong>David Bau</strong>, Bolei Zhou, Aude Oliva, Antonio Torralba:
-<a href="https://arxiv.org/pdf/1711.05611.pdf">Interpreting Deep Visual Representations via Network Dissection.</a> <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI) Volume 41 Issue 9, September 2019, pp. 2131-2145.</em>
-</div>
-
-<div class="main pub"><strong>David Bau</strong>, Jeff Gray, Caitlin Kelleher, Josh Sheldon, Franklyn Turbak.
-<a href="http://dl.acm.org/citation.cfm?id=3015455">Learnable Programming: Blocks and Beyond</a>. 
-<em>Communications of the ACM (CACM) Volume 60 Issue 6, June 2017. pp. 72-80.</em></div>
 
 <h3 class="main">Book</h3>
 
@@ -215,9 +245,8 @@ Saksham Aggarwal, David Anthony Bau, <strong>David Bau</strong>. <a href="https:
 
 </div> <!-- textcard -->
 </div> <!-- publication -->
-</div>
 
-<div class="row">
+<div class="row no-print">
 <div class="col">
 <div class="footer">
         <a href="http://dblp.uni-trier.de/pers/hd/b/Bau:David">Dblp</a>
@@ -232,7 +261,7 @@ Saksham Aggarwal, David Anthony Bau, <strong>David Bau</strong>. <a href="https:
 </div>
 </div>
 </div>
-<div class="row">
+<div class="row no-print">
 <div class="col">
 </div>`
 </div>
