Update with Khoury info.

--- a/src/cv.html
+++ b/src/cv.html
@@ -338,6 +338,10 @@ Saksham Aggarwal, David Anthony Bau, <strong>David Bau</strong>. <a href="https:
 <div class="main pub">Lloyd N. Trefethen, <strong>David Bau</strong>. <a href="http://www.amazon.com/Numerical-Linear-Algebra-Lloyd-Trefethen/dp/0898713617"><em>Numerical Linear Algebra.</em></a>
 (373pp.) Society for Industrial and Applied Mathematics. (1997)</div>
 
+<h2 class="main">Preprints</h2>
+
+<div class="main pub"><strong>David Bau</strong>, Alex Andonian, Audrey Cui, Yeon-Hwan Park, Ali Jahanian, Aude Oliva, Antonio Torralba.  <a href="https://arxiv.org/abs/2103.10951">Paint by Word</a>.  arxiv.org/abs/2103.10951 (2021)</div>
+
 <h2 class="main">Selected Patents</h2>
 
 <div class="main pub"><strong>David Bau</strong>, Google.  <a href="https://www.google.com/patents/US8621395">Predictive hover triggering.</a> US&nbsp;Patent&nbsp;8621395. (2011)</div>
