--- a/src/cv.html
+++ b/src/cv.html
@@ -390,6 +390,8 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Invited Talks</h2>
 
+<div class="main pub"><em>Opening Up AI For Human Insight and Creativity.</em> Keynote for Workshop on Measurements of Machine Creativity, at CVPR June 2021.</div>
+<div class="main pub"><em>Cracking Open AI for New Insights.</em> Keynote for Workshop on Analysis and Modeling of Faces, at CVPR June 2021.</div>
 <div class="main pub"><em>Analyzing the Role of Neurons in an Artificial Neural Network.</em> Kanwisher Lab Meeting, MIT Dept of Brain and Cognitive Sciences.  Cambridge, MA. September 2020.</div>
 <div class="main pub"><em>Cracking Open the Black Box.</em> MIT-IBM Seminar Series.  Cambridge, MA. September 2020.</div>
 <div class="main pub"><em>Human Agency and Network Rules: Rewriting a Generative Network.</em> Google Magenta Group Meeting.  Mountain View, CA. September 2020.</div>
@@ -469,6 +471,7 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 <div class="main">Lincoln Middle School Math Team Coach.  2009-2015.</div>
 <div class="main">Lincoln Gear Ticks FLL Robotics Coach.  2012-2013.</div>
 
+<!--
 <h2 class="main">References</h2>
 
 <div class="main">
@@ -514,8 +517,10 @@ Cambridge, MA 02139<br>
 </tr>
 
 </table>
+</div>
+--><!--end references-->
 
-</div><!--cv-->
+</div><!--end cv-->
 </body>
 <script>
 var theapp = new Vue({
