New papers, new links, new stats.

--- a/src/cv.html
+++ b/src/cv.html
@@ -152,7 +152,7 @@ A.B. in Mathematics
 With Google and open-source contributors.
 <ul>
 <li>Created an educational programming system and curriculum
-for beginners, with 107,000 active accounts and 2,000 users
+for beginners, with 159,000 active accounts and 2,000 users
 every school day.
 </ul>
 </div>
@@ -259,11 +259,20 @@ innovative programming tool project.
 <h3 class="main">Conference papers</h3>
 
 <div class="main pub">
+Sarah Schwettmann, Evan Hernandez, <strong>David Bau</strong>, Samuel Klein, Jacob Andreas, Antonio Torralba.
+<a href="https://visualvocab.csail.mit.edu/">Toward a Visual Concept Vocabulary for GAN Latent Space</a>  <em>Proceedings of the IEEE International Conference on Compputer Vision.</em> (ICCV 2021)
+</div>
+
+<div class="main pub">
+Sheng-Yu Wang, <strong>David Bau</strong>, Jun-Yan Zhu.  <a href="https://peterwang512.github.io/GANSketching/">Sketch Your Own GAN.</a>  <em>Proceedings of the IEEE International Conference on Compputer Vision.</em> (ICCV 2021)
+</div>
+
+<div class="main pub">
 <strong>David Bau</strong>, Steven Liu, Tongzhou Wang, Jun-Yan Zhu, and Antonio Torralba. <a href="https://rewriting.csail.mit.edu/">Rewriting a Deep Generative Model.</a> <em>Proceedings of the European Conference on Computer Vision.</em> (ECCV 2020 oral)
 </div>
 
 <div class="main pub">
-Lucy Chai, <strong>David Bau</strong>, Ser-Nam Lim, and Phillip Isola. What makes fake images detectable? Understanding properties that generalize. <em>Proceedings of the European Conference on Computer Vision.</em> (ECCV 2020)
+Lucy Chai, <strong>David Bau</strong>, Ser-Nam Lim, and Phillip Isola. <a href="https://chail.github.io/patch-forensics/">What makes fake images detectable? Understanding properties that generalize.</a> <em>Proceedings of the European Conference on Computer Vision.</em> (ECCV 2020)
 </div>
 
 <div class="main pub">
