--- a/src/cv.html
+++ b/src/cv.html
@@ -24,7 +24,9 @@
   margin-bottom: 0.75in;
   margin-left: 0.75in;
   margin-right: 0.75in;
-} 
+}
+a:link {color:#000088;}
+a:visited {color:#000088;}
 }
 body, td, th { font-family: 'Times New Roman', serif; font-weight: 400;
   font-size: 11pt; line-height: 1.3; }
@@ -79,11 +81,11 @@ Computer vision, Explainable machine learning, Human-computer iteraction.
 <h2 class="main">Research Projects</h2>
 
 <div class="main item">
-<strong>Model Rewriting, <a href="https://rewriting.csail.mit.edu/">rewriting.csail.mit.edu</a>.</strong> A project to investigate how a user can directly change the parameters of a deep model according to their own intentions, rather than using a data set for retraining.  I find that the weights of a model are structured like an optimal linear associative memory, and I use this insight to develop a method and tool for rewriting the rules of start-of-the-art generative networks.
+<strong>Model Rewriting, <a href="https://rewriting.csail.mit.edu/">rewriting.csail.mit.edu</a>.</strong> A project to investigate how a user can directly change the parameters of a deep model according to their own intentions, rather than using a data set for retraining.  We find that the weights of a model are structured like an optimal linear associative memory, and we use this insight to develop a method and tool for rewriting the rules of start-of-the-art generative networks.
 </div>
 
 <div class="main item">
-<strong>GAN Paint, <a href="https://gandissect.csail.mit.edu/">gandissect.csail.mit.edu</a>.</strong>  An analysis method that reveals emergent object concepts represented in the middle layers of a GAN (trained without supervision of labels).  The encoding of objects is simple enough that objects can be added or removed from a scene by activating or silencing units in the GAN directly. I apply this technique to semantic photo manipulation in GAN Paint, <a href="http://ganpaint.io/">ganpaint.io</a>.
+<strong>GAN Paint, <a href="https://gandissect.csail.mit.edu/">gandissect.csail.mit.edu</a>.</strong>  An analysis method that reveals emergent object concepts represented in the middle layers of a GAN (trained without supervision of labels).  The encoding of objects is simple enough that objects can be added or removed from a scene by activating or silencing units in the GAN directly. We apply this technique to semantic photo manipulation in GAN Paint, <a href="http://ganpaint.io/">ganpaint.io</a>.
 </div>
 
 <div class="main item">
@@ -117,10 +119,9 @@ to understand what deep networks represent when they learn how to learn.
 <div class="main item">
 <strong>Massachusetts Institute of Technology</strong>, Cambridge, MA<br>
 Ph.D. Candidate in Electrical Engineering and Computer Science<br>
-Thesis topic: The Representation of Visual Concepts
-in Deep Networks for Vision<br>
+Thesis: Dissection of Deep Neural Networks<br>
 Advisor: Antonio Torralba<br>
-Anticipated graduation: June 2021
+Anticipated graduation: September 2021
 </div>
 
 <div class="index">1992-1994</div>
