xmlbeans is alive.

--- a/src/cv.html
+++ b/src/cv.html
@@ -203,7 +203,7 @@ aspects of the technology.
 
 <div class="index">2003</div>
 <div class="main item">
-<strong>XML Beans.</strong>  Contributor to the Apache Foundation.
+<strong>XML Beans.</strong> <a href="https://xmlbeans.apache.org/">xmlbeans.apache.org</a> Contributor to the Apache Foundation.
 <ul>
 <li>Created an open-source compiler for the XML
 Schema standard in Java.
