--- a/src/index.html
+++ b/src/index.html
@@ -188,17 +188,20 @@ document.write('<a href="mailto:' + emn + '">' + emn + '</a>');
 <figcaption>Why we study deep network internals.  <nobr>David Bau</nobr> (narrates), with Antonio Torralba, Jun-Yan Zhu, Hendrik Strobelt, Jonas Wulff, and William Peebles. <nobr>Video by Lillie Paquette,</nobr> MIT School of Engineering.</figcaption>
 </figure>
 <p>
-I will be an Assistant Professor of Computer Science at <a
+I will be Assistant Professor of Computer Science at <a
 href="https://www.khoury.northeastern.edu/research/research-areas/"
 >Northeastern Khoury College</a> starting in 2022.
 <p>
-My group will study how state-of-the-art deep networks work,
-and how people can control them to enable new applications.
-We aim to lay the groundwork for human-AI
-collaborative software engineering, where humans and
-machine-learned models both teach and learn from each other.
+We think that understanding the rich internal structure of deep
+networks is a grand and fundamental research question with many
+practical implications.
+</p>
 <p>
-Want to come to Boston to work on interactive deep learning with me?
+We aim to lay the groundwork for human-AI collaborative
+software engineering, where humans and machine-learned
+models both teach and learn from each other.
+<p>
+Want to come to Boston to work on deep learning with me?
 <a href="https://www.khoury.northeastern.edu/apply/phd-apply/">Apply
   to Khoury here</a> and <a href="mailto:davidbau@csail.mit.edu"
   >contact me</a> if you are interested in joining as a graduate
