--- a/src/cv.html
+++ b/src/cv.html
@@ -61,12 +61,12 @@ p { margin-top: 8pt; margin-bottom: 8pt; }
 <div class="main" style="margin-top: 18pt;">
 <table style="width:80%"><tr>
 <td style="width:50%">
-MIT CSAIL<br>
-32 Vassar Street, 32-383<br>
-Cambridge, MA 02139
+Address:<br>
+88 Lincoln Road<br>
+Lincoln, MA 01773
 </td>
 <td>
-<a href="https://people.csail.mit.edu/davidbau/home/">people.csail.mit.edu/davidbau</a><br>
+<a href="http://davidbau.com/research/">davidbau.com/research</a><br>
 <a href="mailto:davidbau@csail.mit.edu">davidbau@csail.mit.edu</a><br>
 +1-781-296-9825
 </td>
@@ -115,10 +115,10 @@ to understand what deep networks represent when they learn how to learn.
 
 <h2 class="main">Education</h2>
 
-<div class="index">2015-present</div>
+<div class="index">2015-2021</div>
 <div class="main item">
 <strong>Massachusetts Institute of Technology</strong>, Cambridge, MA<br>
-Ph.D. Candidate in Electrical Engineering and Computer Science<br>
+Ph.D. in Electrical Engineering and Computer Science<br>
 Thesis: Dissection of Deep Neural Networks<br>
 Advisor: Antonio Torralba<br>
 Anticipated graduation: September 2021
@@ -145,6 +145,21 @@ A.B. in Mathematics
 <div class="main">NSF Graduate Research Fellowship, 1992</div>
 
 <h2 class="main">Employment</h2>
+
+<div class="index">2022-</div>
+<div class="main item">
+<strong>Assistant Professor.</strong> Northeastern Khoury College of Computer Science.
+</div>
+
+<div class="index">2021-2022</div>
+<div class="main item">
+<strong>Postdoctoral Fellow.</strong> Wattenberg lab, Harvard University.
+</div>
+
+<div class="index">2015-2021</div>
+<div class="main item">
+<strong>Research Assistant.</strong> Torralba lab, MIT CSAIL.
+</div>
 
 <div class="index">2013-2015</div>
 <div class="main item">
